--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.cdnfonts.com/css/poppins");
 
-*{
-  font-family: 'poppins', sans-serif;
-  margin: 0;
-  padding: 0;
+* {
+	font-family: "poppins", sans-serif;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
